# zcrypt

./: .dockerignore  .gitignore  .goreleaser.yml  Agent.md  BUSINESS_MODEL.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  UPLOAD_PIPELINE_FAILURES.md  bottom-nav-showcase.html  cliff.toml  docker-compose.test.yml  in.html  sample.html
.claude/: settings.json  settings.local.json
.githooks/: pre-push
.github/: FUNDING.yml
.github/workflows/: android.yml  ci.yml  desktop.yml  device.yml  neon-watch.yml  release.yml  security.yml
app/backend/: .env.example  .env.prodtest.example  .golangci.yml  FOLDER_PASSWORD_CONTRACT.md  FOLDER_PASSWORD_FIXES.md  TESTING.md  go.mod  go.sum  main.go  openapi.yaml
app/backend/adapters/: github.go  github_test.go  gitlab.go  gitlab_test.go  huggingface.go  huggingface_test.go  interface.go  telegram.go  telegram_probe.go  telegram_test.go  testhelpers_test.go
app/backend/auth/: auth_test.go  backup_codes.go  backup_codes_test.go  breach.go  email.go  email_test.go  jwt.go  jwt_edge_test.go  jwt_tokentype_test.go  oauth.go  oauth_test.go  password.go  totp.go  totp_test.go
app/backend/chunks/: chunks_test.go  merge.go  split.go  verify.go  verify_test.go
app/backend/cmd/: admin.go  auth.go  auth_dummyhash_test.go  auth_middleware.go  auth_middleware_test.go  byos.go  chunk_cache.go  cleanup.go  clientip.go  clientip_test.go  clipboard.go  commit.go  config.go  deadman.go  decoy.go  delete.go  download.go  download_prod_test.go  events.go  expiring_vault.go  folder_shares.go  folders.go  integrity.go  keys.go  list.go  masking.go  masking_test.go  notes.go  oauth.go  offline.go  pad.go  platforms.go  preferences.go  pull.go  push.go  push_limiter.go  push_limiter_test.go  ratelimit.go  reconcile.go  repo_heal_test.go  (+11 more)
app/backend/compression/: compress.go  compression_test.go  decompress.go
app/backend/config/: config.go  config_extra_test.go  config_test.go
app/backend/crypto/: crypto_test.go  decrypt.go  encrypt.go  envelope.go  envelope_extra_test.go  keys.go  seal.go  seal_test.go
app/backend/disguise/: commits.go  disguise_test.go  filenames.go  filenames_extra_test.go  names.go
app/backend/index/: audit_chain_test.go  audit_queries.go  auth_queries.go  byos_queries.go  clipboard_queries.go  db.go  deadman_queries.go  decoy_queries.go  feedback_queries.go  folder_share_queries.go  folders_queries.go  integrity_queries.go  key_queries.go  notes_queries.go  oauth_queries.go  offline_queries.go  pad_queries.go  preference_queries.go  queries.go  schema.go  send_queries.go  shared_vault_queries.go  snapshot_queries.go  sync_queries.go  token_queries.go  vault_queries.go
app/backend/integration/: admin_leastpriv_test.go  auth_test.go  byos_direct_test.go  dedupe_deletion_test.go  deletion_test.go  encrypted_name_test.go  folder_share_test.go  helpers_test.go  keys_test.go  login_enum_test.go  masking_test.go  mock_adapter_test.go  sha256_scheme_test.go  shared_vault_test.go  twofa_test.go  upload_cap_test.go  upload_test.go  util_test.go
app/backend/pipeline/: engine.go  progress.go  progress_test.go
app/backend/reppool/: manager.go  manager_test.go
app/backend/types/: types.go  types_test.go
app/core/: Cargo.toml
app/core/src/: compression.rs  crypto.rs  disguise.rs  lib.rs  localdb.rs  placement.rs  profiles.rs  reppool.rs  types.rs
app/core/src/adapters/: github.rs  gitlab.rs  huggingface.rs  mod.rs  telegram.rs
app/core/src/api/: client.rs  download.rs  mod.rs  types.rs  upload.rs
app/core/src/engines/: bulk_download.rs  decrypt_to_memory.rs  delete.rs  download.rs  local_upload.rs  mod.rs  ordered_writer.rs  pipeline.rs  stream_upload.rs  sync.rs
app/core/tests/: conformance.rs
app/desktop/: .gitignore  build-frontend.sh  build-sidecar.sh  package.json
app/desktop/sidecar/: go.mod  go.sum  handlers.go  main.go
app/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/desktop/src-tauri/capabilities/: default.json
app/desktop/src-tauri/icons/: icon.icns
app/desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs
app/frontend/: .gitignore  .jscpd.json  REBUILD_CONTRACT.md  REBUILD_FIXES.md  REBUILD_SPEC.md  eslint.config.mjs  next.config.ts  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vitest.config.ts
app/frontend/.vercel/: project.json
app/frontend/__tests__/: README.md
app/frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
app/frontend/hooks/: edge-auto-scroll.ts  useAdminGuardedFetch.ts  useClickOutside.ts  useCopyFeedback.ts  useDecodedBlob.ts  useDragMove.ts  useFeedbackTrigger.ts  useFileDecryptor.ts  useFileEvents.ts  useFileList.ts  useFolderProtection.ts  useFolders.ts  useInViewOnce.ts  useIsMobile.ts  useNotifications.ts  useOperationStatus.ts  usePlatformHealth.ts  useQuota.ts  useShares.ts  useThumbnail.ts  useToggleFullscreen.ts  useTouchDragMove.ts  useTouchRangeSelect.ts  useVaultActions.ts  useVaultLock.ts
app/frontend/lib/: api.ts  crypto.ts  (+60 more)
app/tui/: go.mod  go.sum  main.go
docs/: CLIENT_SIDE_ARCHITECTURE.md  CRYPTO_FORMAT.md  DB_SCALING_100_PROJECTS.md  DESKTOP_ARCHITECTURE.md  DESKTOP_UPLOAD_EXPLAINED.md  FEATURES_CONTRACT.md  FEATURES_SPEC.md  FEATURE_ROADMAP.md  FOLDER_PASSWORD_CONTRACT.md  FOLDER_PASSWORD_SPEC.md  LOAD_TESTING.md  README-blocks.md  REBUILD_CONTRACT.md  REBUILD_SPEC.md  REDESIGN_TODO.md  RUST_MIGRATION_TODO.md  SHIMMER_BUG_REPORT.md  SITE_GOOGLE_RANKING.md  TESTING.md  envelope-encryption-design.md  frontend-tests-README.md
landing-mockups/: CODEX-PROMPT.md  claude.html  codex.html  dashbaord.html  landing.html  master.html  version-1.html  version-2.html  version-3.html
scripts/: build-desktop.sh  db-clone-from-prod.sh  install-hooks.sh  install.sh  neon-rotate.sh  neon-usage.sh  prepush.sh
scripts/git-hooks/: pre-push
scripts/npm/: publish.sh
tests/e2e/: auth.spec.ts  helpers.ts  package.json  playwright.config.ts  upload.spec.ts
tests/load/: README.md
(+588 files in other folders)
