[package]
name = "zcrypt-desktop"
version = "0.1.0"
edition = "2024"
description = "zcrypt desktop — zero-knowledge encrypted cloud storage"
license = "MIT"

[lib]
# Tauri mobile (android/ios) links the app as a shared library: `cdylib` emits
# the libzcrypt_desktop.so the android build expects, `staticlib` covers iOS, and
# `rlib` lets the desktop binary (src/main.rs) link `run()`. Required by
# `cargo tauri android build`; harmless on desktop.
name = "zcrypt_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
zcrypt-core = { path = "../../core" }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["io-util", "sync", "rt", "time"] }
# Folder-watch backup: fs change events → local_upload (all desktop OSes).
notify = "6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
# Launch-at-login (desktop-only; mobile lifecycle is OS-managed).
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# Touch ID convenience-unlock via Apple's LocalAuthentication framework.
# default-features off on objc2-local-authentication: its default pulls in
# every LA* symbol group plus objc2-security, we only need LAContext.
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"
objc2-local-authentication = { version = "0.3", default-features = false, features = [
    "LAContext",
    "block2",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
